# cleonos

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.zh-CN.md  build.bdt  project.bdt
.VSCodeCounter/2026-04-21_02-41-45/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-05-02_17-54-01/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: build-os.yml  style-check.yml
cleonos/: CMakeLists.txt  build.bdt
cleonos/c/apps/: ansi_main.c  ansitest_main.c  app_heap.inc  append_main.c  args_main.c  bdt_main.c  benchmark_main.c  bg_main.c  bmpview_main.c  bootargs_main.c  browser_heap.c  browser_main.c  calc_main.c  calendar_main.c  cat_main.c  cd_main.c  chinese_main.c  cmd_runtime.c  cmd_runtime.h  contacts_main.c  control_main.c  cp_main.c  cut_main.c  devtest_main.c  diskdrv_main.c  diskinfo_main.c  dltest_main.c  dmesg_main.c  doom_main.c  driver_stub.h  drvctl_main.c  emoji_main.c  exec_main.c  exit_main.c  fastfetch_main.c  fbdrv_main.c  fdtest_main.c  fg_main.c  file_explorer_heap.c  file_explorer_main.c  (+108 more)
cleonos/c/apps/bdt/: bdt_cleonos_compat.c  bdt_cleonos_compat.h  dirent.h  dlfcn.h  errno.h  fcntl.h  unistd.h
cleonos/c/apps/bdt/sys/: ioctl.h  stat.h
cleonos/c/apps/browser/: browser_cookie.c  browser_css.c  browser_dns.c  browser_dom.c  browser_fetch.c  browser_fetch_error.c  browser_form.c  browser_http.c  browser_internal.h  browser_net.c  browser_output.c  browser_session.c  browser_shared.h  browser_source.c  browser_state.c  browser_text.c  browser_url.c  browser_url_parse.c
cleonos/c/apps/doom/: doom_compat.c  doom_shim.h  doomgeneric_clks.c
cleonos/c/apps/fastfetch/: fastfetch_cleonos.h  fastfetch_cleonos_cli.c  fastfetch_cleonos_compat.c  fastfetch_cleonos_compat.h  fastfetch_cleonos_detect.c  fastfetch_cleonos_detection.c  fastfetch_cleonos_logo.c  fastfetch_cleonos_modules.c  fastfetch_cleonos_modules_registry.c  fastfetch_cleonos_platform.c  fastfetch_cleonos_stubs.c  fastfetch_cleonos_util.c  fastfetch_cli_entry.c  fastfetch_config.h  fastfetch_datatext.h  logo_builtin.h
cleonos/c/apps/lua/: ctype.h  errno.h  locale.h  lua_cleonos_compat.c  lua_cleonos_compat.h  lua_cleonos_config.h  lua_cleonos_libs.c  lua_cleonos_setjmp.S  lua_cleonos_setjmp.c  math.h  setjmp.h  signal.h  time.h
cleonos/c/apps/qrcode/: qrcodegen.c
cleonos/c/apps/shell/: shell_auth.c  shell_cmd.c  shell_external.c  shell_input.c  shell_internal.h  shell_linenoise.c  shell_util.c
cleonos/c/apps/sqlite/: sqlite_cleonos_vfs.c
cleonos/c/apps/stb/: stb_image_cleonos.c  stb_image_cleonos.h
cleonos/c/apps/tcc/: config.h  errno.h  fcntl.h  inttypes.h  math.h  stdint.h  stdio.h  tcc_cleonos_compat.c  tcc_cleonos_compat.h  unistd.h
cleonos/c/apps/tcc/sys/: time.h
cleonos/c/apps/terminal/: terminal.c  terminal.h  terminal_heap.c
cleonos/c/apps/tls/: cleonos_mbedtls_config.h  cleonos_tls.c  cleonos_tls.h  cleonos_tls_entropy.c
cleonos/c/apps/user/: cleonos_user.c  cleonos_user.h
cleonos/c/apps/uwm/: uwm.h  uwm_app.c  uwm_events.c  uwm_heap.c  uwm_util.c  uwm_window.c
cleonos/c/apps/uwm_uilib/: uwm_uilib.c
cleonos/c/include/: assert.h  cleonos_syscall.h  cleonos_tui.h  cleonos_version.h  ctype.h  dirent.h  dlfcn.h  errno.h  fcntl.h  locale.h  math.h  pnglibconf.h  setjmp.h  signal.h  termbox2.h  time.h  uchar.h  unistd.h  uwm_uilib.h  wchar.h
cleonos/c/include/sys/: mman.h  stat.h  types.h  utsname.h
cleonos/c/src/: cxx_runtime.cpp  libc_ctype.c  libc_stdlib.c  libc_string.c  mman.c  posix.c  syscall.c  time.c
cleonos/c/tccroot/: crt1.c  empty.c  posix.c
cleonos/c/tccroot/include/: errno.h  fcntl.h  stdint.h  unistd.h
cmake/: check_tools.cmake  ensure_disk_image.cmake
common/include/: cleonos_version.h
configs/: limine-harddisk.conf  limine.conf
configs/menuconfig/: .config.cleonos.json  .config.clks.json  clks_features.json  config.cleonos.bdt  config.cleonos.cmake  config.clks.bdt  config.clks.cmake
docs/: README.md  ansi.md  elf-dynamic-library.md  httpd.md  input-method-dev.md  remote-shell.md  stage23.md  stage26.md  stage30.md  stage31.md  stage8.md  syscall.md  webconsole.md
kit/: CMakeLists.txt  Makefile  README.md  README.zh-CN.md
ramdisk/: README.txt
ramdisk/c-example/: README.txt  main.c  project.bdt
ramdisk/etc/: os-version
ramdisk/system/inputm/: emoji.db  pinyin.db  pinyin_LICENSE.txt  romaji.db  symbols.db
ramdisk/www/: index.html
scripts/: bdt_gen_menuconfig.py  build_tcc_runtime.sh  gen_os_version.py  gen_pinyin_db.py  menuconfig.py
tools/: cleonos-rsh-client.c  make_cjk_psf.py
